# zenit-ai

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.md  Makefile  alpha_func.py  conf.py  functions.py  index.rst  make.bat  metrics.py  readme.md  readme.txt  sandbox.py  setup.cfg  setup.py  tests.py  utils.py  woeTransformer.py  woeTransformer_beta.py  woeTransformer_class.py  woe_tests.py
ZenitAI.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
_build/doctrees/: WoeTransformer.doctree  environment.pickle  functions.doctree  index.doctree  metrics.doctree  tests.doctree  transform.doctree  utils.doctree  utils_.doctree
_build/html/: .buildinfo  WoeTransformer.html  functions.html  genindex.html  index.html  metrics.html  objects.inv  py-modindex.html  search.html  searchindex.js  tests.html  transform.html  utils.html  utils_.html
_build/html/_sources/: tests.rst.txt  transform.rst.txt
docs/: WoeTransformer.rst  conf.py  functions.rst  index.rst  requirements.txt  welcome.rst
docs/tutorial/: README.ipynb
notebooks/: .gitignore  Untitled-Copy1.ipynb  WOE-class-demo.html  WOE-class-demo.ipynb
notebooks/.ipynb_checkpoints/: Untitled-Copy1-checkpoint.ipynb  WOE-class-demo-checkpoint.ipynb  WOE-class-demo-checkpoint.py
notebooks/python/: Untitled-Copy1.py  WOE-class-demo.py  woeTransformer_class.py
tests/: tests_woeTransformer_beta.py
transform/: woe.py
zenitai/: __init__.py
zenitai/ZenitAI.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
zenitai/ZenitAI_cem3h.egg-info/: PKG-INFO  SOURCES.txt
zenitai/experiment/: __init__.py  experiment.py
zenitai/transform/: __init__.py  _alpha_func.py  _woe.py  woe.py
zenitai/utils/: __init__.py  functions.py  metrics.py  tests.py  utils.py
(+36 files in other folders)
