[metadata]
# replace with your username:
name = ZenitAI
version = 0.5.2
author = Stepan Kadochnikov
author_email = kadochnikov.sv@gmail.com
description = Tools for ML
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CEM3H/zenit-ai
project_urls =
    Bug Tracker = https://github.com/CEM3H/zenit-ai/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = zenitai
packages = find:
python_requires = >=3.6

[options.packages.find]
where = zenitai

[build_sphinx]
project = ZenitAI
source-dir = docs
