[metadata]
# replace with your username:
name = ZenitAI
version = 0.5.2
release = 0.5.2
author = Stepan Kadochnikov
author_email = kadochnikov.sv@gmail.com
description = Tools for ML
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CEM3H/zenit-ai
project_urls =
    Bug Tracker = https://github.com/CEM3H/zenit-ai/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = zenitai
packages = find:
python_requires = >=3.6

[options.packages.find]
where = zenitai

[build_sphinx]
project = ZenitAI
source-dir = docs

[flake8]
max-line-length = 119
exclude =.git,__pycache__,docs/source/conf.py,build,dist,sandbox.py
ignore = I101,I201,F401,F403,S001,D100,D101,D102,D103,D104,D105,D106,D107,D200,D205,D400,W504,E203,D202,D401,W503,C0103

[mypy]
ignore_missing_imports = True
